--- a/apps/aiostreams/config.json
+++ b/apps/aiostreams/config.json
@@ -9,37 +9,65 @@
   "dynamic_config": true,
   "port": 3000,
   "categories": ["media","ai"],
-  "author": "viren070",
-  "description": "Aggregate and customize multiple Stremio addons and debrid services in one interface.",
-  "short_desc": "Unified Stremio addon with filtering, sorting, and proxy support.",
+  "author": "viren070 + Runtipi community",
+  "description": "Aggregate and filter multiple Stremio addons and debrid services in one addon.",
+  "short_desc": "Unified Stremio addon interface with advanced filtering.",
   "source": "https://github.com/Viren070/AIOStreams",
-  "supported_architectures": ["amd64","arm64"],
   "form_fields": [
-    {"type":"text","label":"Addon Name","env_variable":"ADDON_NAME","default":"AIOStreams","placeholder":"AIOStreams"},
-    {"type":"text","label":"Addon ID","env_variable":"ADDON_ID","default":"aiostreams.my-domain.com","placeholder":"aiostreams.my-domain.com"},
-    {"type":"boolean","label":"Deterministic Addon ID","env_variable":"DETERMINISTIC_ADDON_ID","default":true},
-    {"type":"number","label":"Port","env_variable":"PORT","default":3000},
-    {"type":"password","label":"Secret Key","env_variable":"SECRET_KEY","default":""},
-    {"type":"text","label":"API Key","env_variable":"API_KEY","default":""},
-    {"type":"boolean","label":"Show Dice Emoji","env_variable":"SHOW_DIE","default":false},
-    {"type":"boolean","label":"Log Sensitive Info","env_variable":"LOG_SENSITIVE_INFO","default":true},
-    {"type":"number","label":"Default Timeout (ms)","env_variable":"DEFAULT_TIMEOUT","default":15000},
-    {"type":"number","label":"Max Addons","env_variable":"MAX_ADDONS","default":15},
-    {"type":"number","label":"Max Keyword Filters","env_variable":"MAX_KEYWORD_FILTERS","default":30},
-    {"type":"number","label":"Max Regex Sort Patterns","env_variable":"MAX_REGEX_SORT_PATTERNS","default":30},
-    {"type":"number","label":"Max Movie Size (bytes)","env_variable":"MAX_MOVIE_SIZE","default":161061273600},
-    {"type":"number","label":"Max Episode Size (bytes)","env_variable":"MAX_EPISODE_SIZE","default":161061273600},
-    {"type":"url","label":"MediaFlow URL","env_variable":"MEDIAFLOW_URL","default":"https://mediafusion.elfhosted.com/"},
-    {"type":"number","label":"MediaFlow IP Timeout (ms)","env_variable":"MEDIAFLOW_IP_TIMEOUT","default":30000},
-    {"type":"url","label":"StremThru URL","env_variable":"DEFAULT_STREMTHRU_URL","default":""},
-    {"type":"number","label":"StremThru Timeout (ms)","env_variable":"STREMTHRU_TIMEOUT","default":30000},
-    {"type":"url","label":"Torrentio URL","env_variable":"TORRENTIO_URL","default":"https://torrentio.strem.fun/"},
-    {"type":"url","label":"Orion Addon URL","env_variable":"ORION_STREMIO_ADDON_URL","default":""},
-    {"type":"url","label":"Peerflix URL","env_variable":"PEERFLIX_URL","default":""},
-    {"type":"url","label":"Torbox Addon URL","env_variable":"TORBOX_STREMIO_URL","default":""},
-    {"type":"url","label":"Easynews URL","env_variable":"EASYNEWS_URL","default":""},
-    {"type":"url","label":"Debridio URL","env_variable":"DEBRIDIO_URL","default":""},
-    {"type":"text","label":"DMM Cast URL","env_variable":"DEFAULT_DMM_CAST_URL","default":""},
-    {"type":"text","label":"Stremio GDrive Addon URL","env_variable":"DEFAULT_STREMIO_GDRIVE_URL","default":""}
-  ]
+    { "type":"text",    "label":"Addon Name",                 "env_variable":"ADDON_NAME",               "placeholder":"AIOStreams" },
+    { "type":"text",    "label":"Addon ID",                   "env_variable":"ADDON_ID",                 "placeholder":"aiostreams.viren070.com" },
+    { "type":"boolean", "label":"Deterministic Addon ID",     "env_variable":"DETERMINISTIC_ADDON_ID",   "default":true },
+    { "type":"number",  "label":"Port",                       "env_variable":"PORT",                     "default":3000 },
+    { "type":"password","label":"Secret Key (64-hex chars)",  "env_variable":"SECRET_KEY",               "placeholder":"" },
+    { "type":"text",    "label":"API Key (for regex filters)", "env_variable":"API_KEY",                  "placeholder":"" },
+    { "type":"boolean", "label":"Show Dice Emoji",            "env_variable":"SHOW_DIE",                 "default":false },
+    { "type":"text",    "label":"Log Level",                  "env_variable":"LOG_LEVEL",                "default":"info",  "hint":"debug, info, warn or error" },
+    { "type":"text",    "label":"Log Format",                 "env_variable":"LOG_FORMAT",               "default":"text",  "hint":"text or json" },
+    { "type":"boolean", "label":"Log Sensitive Info",         "env_variable":"LOG_SENSITIVE_INFO",       "default":true },
+    { "type":"url",     "label":"Addon Proxy URL",            "env_variable":"ADDON_PROXY",              "placeholder":"" },
+    { "type":"text",    "label":"Proxy Rules",                "env_variable":"ADDON_PROXY_CONFIG",       "placeholder":"*:false,*.strem.fun:true" },
+    { "type":"number",  "label":"Max Addons",                 "env_variable":"MAX_ADDONS",               "default":15 },
+    { "type":"number",  "label":"Max Keyword Filters",        "env_variable":"MAX_KEYWORD_FILTERS",      "default":30 },
+    { "type":"number",  "label":"Max Regex Sort Patterns",    "env_variable":"MAX_REGEX_SORT_PATTERNS",  "default":30 },
+    { "type":"number",  "label":"Max Movie Size (bytes)",     "env_variable":"MAX_MOVIE_SIZE",           "default":161061273600 },
+    { "type":"number",  "label":"Max Episode Size (bytes)",   "env_variable":"MAX_EPISODE_SIZE",         "default":161061273600 },
+    { "type":"number",  "label":"Max Override Timeout (ms)",  "env_variable":"MAX_TIMEOUT",              "default":50000 },
+    { "type":"number",  "label":"Min Override Timeout (ms)",  "env_variable":"MIN_TIMEOUT",              "default":1000 },
+    { "type":"number",  "label":"Default Timeout (ms)",       "env_variable":"DEFAULT_TIMEOUT",          "default":15000 },
+    { "type":"number",  "label":"MediaFlow IP Timeout (ms)",  "env_variable":"MEDIAFLOW_IP_TIMEOUT",     "default":30000 },
+    { "type":"url",     "label":"Default MediaFlow URL",      "env_variable":"DEFAULT_MEDIAFLOW_URL",    "default":"https://mediaflow.elfhosted.com/" },
+    { "type":"text",    "label":"Default MediaFlow API Password", "env_variable":"DEFAULT_MEDIAFLOW_API_PASSWORD", "placeholder":"" },
+    { "type":"text",    "label":"Default MediaFlow Public IP","env_variable":"DEFAULT_MEDIAFLOW_PUBLIC_IP","placeholder":"" },
+    { "type":"boolean", "label":"Encrypt MediaFlow URLs",      "env_variable":"ENCRYPT_MEDIAFLOW_URLS",   "default":true },
+    { "type":"number",  "label":"StremThru Timeout (ms)",      "env_variable":"STREMTHRU_TIMEOUT",        "default":30000 },
+    { "type":"url",     "label":"Default StremThru URL",      "env_variable":"DEFAULT_STREMTHRU_URL",    "placeholder":"" },
+    { "type":"text",    "label":"Default StremThru Credential","env_variable":"DEFAULT_STREMTHRU_CREDENTIAL","placeholder":"" },
+    { "type":"text",    "label":"Default StremThru Public IP", "env_variable":"DEFAULT_STREMTHRU_PUBLIC_IP","placeholder":"" },
+    { "type":"boolean", "label":"Encrypt StremThru URLs",      "env_variable":"ENCRYPT_STREMTHRU_URLS",   "default":true },
+    { "type":"url",     "label":"Comet URL",                  "env_variable":"COMET_URL",                "default":"https://comet.elfhosted.com/" },
+    { "type":"url",     "label":"MediaFusion URL",            "env_variable":"MEDIAFUSION_URL",          "default":"https://mediafusion.elfhosted.com/" },
+    { "type":"url",     "label":"JackettIO URL",              "env_variable":"JACKETTIO_URL",            "default":"https://jackettio.elfhosted.com/" },
+    { "type":"text",    "label":"Default JackettIO Indexers (JSON)","env_variable":"DEFAULT_JACKETTIO_INDEXERS","default":"[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]" },
+    { "type":"url",     "label":"Torrentio URL",              "env_variable":"TORRENTIO_URL",            "default":"https://torrentio.strem.fun/" },
+    { "type":"number",  "label":"Torrentio Timeout (ms)",      "env_variable":"DEFAULT_TORRENTIO_TIMEOUT","default":15000 },
+    { "type":"url",     "label":"StremThru Store URL",        "env_variable":"STREMTHRU_STORE_URL",      "default":"https://stremthru.elfhosted.com/stremio/store/" },
+    { "type":"number",  "label":"StremThru Store Timeout (ms)","env_variable":"DEFAULT_STREMTHRU_STORE_TIMEOUT","default":15000 },
+    { "type":"url",     "label":"Peerflix URL",               "env_variable":"PEERFLIX_URL",             "default":"https://peerflix-addon.onrender.com/" },
+    { "type":"number",  "label":"Peerflix Timeout (ms)",       "env_variable":"DEFAULT_PEERFLIX_TIMEOUT", "default":15000 },
+    { "type":"url",     "label":"Easynews+ URL",              "env_variable":"EASYNEWS_PLUS_URL",        "default":"https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/" },
+    { "type":"number",  "label":"Easynews+ Timeout (ms)",      "env_variable":"DEFAULT_EASYNEWS_PLUS_TIMEOUT","default":15000 },
+    { "type":"url",     "label":"Easynews++ URL",             "env_variable":"EASYNEWS_PLUS_PLUS_URL",   "default":"https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/" },
+    { "type":"number",  "label":"Easynews++ Timeout (ms)",     "env_variable":"DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT","default":15000 },
+    { "type":"url",     "label":"Orion Stremio Addon URL",    "env_variable":"ORION_STREMIO_ADDON_URL",  "default":"https://5a0d1888fa64-orion.baby-beamup.club/" },
+    { "type":"number",  "label":"Orion Timeout (ms)",          "env_variable":"DEFAULT_ORION_STREMIO_ADDON_TIMEOUT","default":15000 },
+    { "type":"url",     "label":"Easynews URL",               "env_variable":"EASYNEWS_URL",             "default":"https://ea627ddf0ee7-easynews.baby-beamup.club/" },
+    { "type":"number",  "label":"Easynews Timeout (ms)",       "env_variable":"DEFAULT_EASYNEWS_TIMEOUT", "default":15000 },
+    { "type":"url",     "label":"Debridio URL",               "env_variable":"DEBRIDIO_URL",             "default":"https://debridio.adobotec.com/" },
+    { "type":"number",  "label":"Debridio Timeout (ms)",       "env_variable":"DEFAULT_DEBRIDIO_TIMEOUT", "default":15000 },
+    { "type":"number",  "label":"DMM Cast Timeout (ms)",       "env_variable":"DEFAULT_DMM_CAST_TIMEOUT", "default":15000 },
+    { "type":"number",  "label":"Stremio GDrive Timeout (ms)", "env_variable":"DEFAULT_STREMIO_GDRIVE_TIMEOUT","default":15000 }
+  ],
+  "supported_architectures":["amd64","arm64"],
+  "created_at":1750000000000,
+  "updated_at":1750000000000
 }
