--- a/apps/aiostreams/config.json
+++ b/apps/aiostreams/config.json
@@ -46,14 +46,16 @@
       "env_variable": "PORT",
       "default": 3000,
       "placeholder": "3000",
-      "hint": "Port on which the addon listens."
+      "hint": "Port on which the addon listens.",
+      "required": true
     },
     {
       "type": "password",
       "label": "Secret Key (64-hex chars)",
       "env_variable": "SECRET_KEY",
       "placeholder": "(auto-generated if blank)",
-      "hint": "64-char hex string to encrypt config; generate via openssl rand -hex 32."
+      "hint": "64-char hex string to encrypt config; generate via openssl rand -hex 32.",
+      "required": true
     },
     {
       "type": "text",
@@ -84,7 +86,8 @@
       "env_variable": "LOG_FORMAT",
       "default": "text",
       "placeholder": "text",
-      "hint": "Log output format: json or text."
+      "hint": "Log output format: json or text.",
+      "required": true
     },
     {
       "type": "boolean",
@@ -114,7 +117,8 @@
       "env_variable": "MAX_ADDONS",
       "default": 15,
       "placeholder": "15",
-      "hint": "Max number of addons per instance."
+      "hint": "Max number of addons per instance.",
+      "required": true
     },
     {
       "type": "number",
@@ -122,7 +126,8 @@
       "env_variable": "MAX_KEYWORD_FILTERS",
       "default": 30,
       "placeholder": "30",
-      "hint": "Max keyword filters allowed."
+      "hint": "Max keyword filters allowed.",
+      "required": true
     },
     {
       "type": "number",
@@ -130,7 +135,8 @@
       "env_variable": "MAX_REGEX_SORT_PATTERNS",
       "default": 30,
       "placeholder": "30",
-      "hint": "Max regex patterns for sorting."
+      "hint": "Max regex patterns for sorting.",
+      "required": true
     },
     {
       "type": "number",
@@ -138,7 +144,8 @@
       "env_variable": "MAX_MOVIE_SIZE",
       "default": 161061273600,
       "placeholder": "161061273600",
-      "hint": "Upper byte limit for movie size slider."
+      "hint": "Upper byte limit for movie size slider.",
+      "required": true
     },
     {
       "type": "number",
@@ -146,7 +153,8 @@
       "env_variable": "MAX_EPISODE_SIZE",
       "default": 161061273600,
       "placeholder": "161061273600",
-      "hint": "Upper byte limit for episode size slider."
+      "hint": "Upper byte limit for episode size slider.",
+      "required": true
     },
     {
       "type": "number",
@@ -154,7 +162,8 @@
       "env_variable": "MAX_TIMEOUT",
       "default": 50000,
       "placeholder": "50000",
-      "hint": "Maximum overrideable timeout in ms."
+      "hint": "Maximum overrideable timeout in ms.",
+      "required": true
     },
     {
       "type": "number",
@@ -162,7 +171,8 @@
       "env_variable": "MIN_TIMEOUT",
       "default": 1000,
       "placeholder": "1000",
-      "hint": "Minimum overrideable timeout in ms."
+      "hint": "Minimum overrideable timeout in ms.",
+      "required": true
     },
     {
       "type": "number",
@@ -170,7 +180,8 @@
       "env_variable": "DEFAULT_TIMEOUT",
       "default": 15000,
       "placeholder": "15000",
-      "hint": "Default request timeout if not overridden."
+      "hint": "Default request timeout if not overridden.",
+      "required": true
     },
     {
       "type": "text",
@@ -199,7 +210,8 @@
       "env_variable": "MEDIAFLOW_IP_TIMEOUT",
       "default": 30000,
       "placeholder": "30000",
-      "hint": "Timeout for fetching IP from MediaFlow before error."
+      "hint": "Timeout for fetching IP from MediaFlow before error.",
+      "required": true
     },
     {
       "type": "url",
@@ -237,7 +249,8 @@
       "env_variable": "STREMTHRU_TIMEOUT",
       "default": 30000,
       "placeholder": "30000",
-      "hint": "Timeout for requests to StremThru instance."
+      "hint": "Timeout for requests to StremThru instance.",
+      "required": true
     },
     {
       "type": "url",
@@ -281,28 +294,32 @@
       "label": "Default Comet Timeout (ms)",
       "env_variable": "DEFAULT_COMET_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Default timeout for Comet API requests."
+      "hint": "Default timeout for Comet API requests.",
+      "required": true
     },
     {
       "type": "text",
       "label": "Force Comet Hostname",
       "env_variable": "FORCE_COMET_HOSTNAME",
       "placeholder": "(blank)",
-      "hint": "Public hostname for internal Comet URL configurations."
+      "hint": "Public hostname for internal Comet URL configurations.",
+      "required": true
     },
     {
       "type": "text",
       "label": "Force Comet Port",
       "env_variable": "FORCE_COMET_PORT",
       "placeholder": "(blank)",
-      "hint": "Public port for internal Comet URL configurations."
+      "hint": "Public port for internal Comet URL configurations.",
+      "required": true
     },
     {
       "type": "text",
       "label": "Force Comet Protocol",
       "env_variable": "FORCE_COMET_PROTOCOL",
       "placeholder": "(blank)",
-      "hint": "Public protocol (http/https) for internal Comet."
+      "hint": "Public protocol (http/https) for internal Comet.",
+      "required": true
     },
     {
       "type": "url",
@@ -317,7 +334,8 @@
       "label": "Default MediaFusion Timeout (ms)",
       "env_variable": "DEFAULT_MEDIAFUSION_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for MediaFusion requests."
+      "hint": "Timeout for MediaFusion requests.",
+      "required": true
     },
     {
       "type": "number",
@@ -325,7 +343,8 @@
       "env_variable": "MEDIAFUSION_CONFIG_TIMEOUT",
       "default": 5000,
       "placeholder": "5000",
-      "hint": "Timeout for /encrypt-user-data endpoint."
+      "hint": "Timeout for /encrypt-user-data endpoint.",
+      "required": true
     },
     {
       "type": "text",
@@ -348,14 +367,16 @@
       "env_variable": "DEFAULT_JACKETTIO_INDEXERS",
       "default": "[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]",
       "placeholder": "[...]",
-      "hint": "JSON array of default JackettIO indexers."
+      "hint": "JSON array of default JackettIO indexers.",
+      "required": true
     },
     {
       "type": "number",
       "label": "Default JackettIO Timeout (ms)",
       "env_variable": "DEFAULT_JACKETTIO_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for JackettIO API requests."
+      "hint": "Timeout for JackettIO API requests.",
+      "required": true
     },
     {
       "type": "url",
@@ -370,21 +391,24 @@
       "label": "Force JackettIO Hostname",
       "env_variable": "FORCE_JACKETTIO_HOSTNAME",
       "placeholder": "(blank)",
-      "hint": "Public hostname for internal JackettIO URLs."
+      "hint": "Public hostname for internal JackettIO URLs.",
+      "required": true
     },
     {
       "type": "text",
       "label": "Force JackettIO Port",
       "env_variable": "FORCE_JACKETTIO_PORT",
       "placeholder": "(blank)",
-      "hint": "Public port for internal JackettIO URLs."
+      "hint": "Public port for internal JackettIO URLs.",
+      "required": true
     },
     {
       "type": "text",
       "label": "Force JackettIO Protocol",
       "env_variable": "FORCE_JACKETTIO_PROTOCOL",
       "placeholder": "(blank)",
-      "hint": "Public protocol for internal JackettIO URLs."
+      "hint": "Public protocol for internal JackettIO URLs.",
+      "required": true
     },
     {
       "type": "url",
@@ -420,7 +444,8 @@
       "label": "Default Stremio-Jackett Timeout (ms)",
       "env_variable": "DEFAULT_STREMIO_JACKETT_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Stremio-Jackett API requests."
+      "hint": "Timeout for Stremio-Jackett API requests.",
+      "required": true
     },
     {
       "type": "url",
@@ -436,7 +461,8 @@
       "env_variable": "DEFAULT_STREMTHRU_STORE_TIMEOUT",
       "default": 15000,
       "placeholder": "15000",
-      "hint": "Timeout for StremThru store addon."
+      "hint": "Timeout for StremThru store addon.",
+      "required": true
     },
     {
       "type": "url",
@@ -481,7 +507,8 @@
       "label": "Default Peerflix Timeout (ms)",
       "env_variable": "DEFAULT_PEERFLIX_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Peerflix addon requests."
+      "hint": "Timeout for Peerflix addon requests.",
+      "required": true
     },
     {
       "type": "url",
@@ -496,7 +523,8 @@
       "label": "Default Easynews+ Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_PLUS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews+ addon."
+      "hint": "Timeout for Easynews+ addon.",
+      "required": true
     },
     {
       "type": "url",
@@ -511,7 +539,8 @@
       "label": "Default Easynews++ Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews++ addon."
+      "hint": "Timeout for Easynews++ addon.",
+      "required": true
     },
     {
       "type": "url",
@@ -541,7 +570,8 @@
       "label": "Default Easynews Timeout (ms)",
       "env_variable": "DEFAULT_EASYNEWS_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Easynews addon."
+      "hint": "Timeout for Easynews addon.",
+      "required": true
     },
     {
       "type": "url",
@@ -556,14 +586,16 @@
       "label": "Default Debridio Timeout (ms)",
       "env_variable": "DEFAULT_DEBRIDIO_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for Debridio addon."
+      "hint": "Timeout for Debridio addon.",
+      "required": true      
     },
     {
       "type": "number",
       "label": "Default DMM Cast Timeout (ms)",
       "env_variable": "DEFAULT_DMM_CAST_TIMEOUT",
       "placeholder": "(inherits DEFAULT_TIMEOUT)",
-      "hint": "Timeout for DMM Cast addon."
+      "hint": "Timeout for DMM Cast addon.",
+      "required": true
     },
     {
       "type": "number",
